# razor-qt

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  COPYING  Makefile  Packaging.markdown  README  README.md  ROADMAP  cmake_install.cmake  index.html  install.php  install.sh  install_manifest.txt  razer.desktop  razor-kdm.desktop  razor.cfg  razor.pro  razorqt-modules.pro
doxygen/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  doxygen.css  fixDoc.sh  footer.html  header.html  search.php
libraries/: CMakeLists.txt
libraries/qtservice/: CMakeLists.txt  LICENSE  qtservice.cpp  qtservice.h  qtservice_p.h  qtservice_unix.cpp  qtservice_win.cpp  qtservicestarter.h  qtservicesysprivate.cpp  qtservicesysprivate.h  qtunixserversocket.cpp  qtunixserversocket.h  qtunixsocket.cpp  qtunixsocket.h
libraries/qtxdg/: CMakeLists.txt  Doxyfile.in  xdgaction.cpp  xdgaction.h  xdgautostart.cpp  xdgautostart.h  xdgdesktopfile.cpp  xdgdesktopfile.h  xdgdirs.cpp  xdgdirs.h  xdgicon.cpp  xdgicon.h  xdgmenu.cpp  xdgmenu.h  xdgmenu_p.h  xdgmenuapplinkprocessor.cpp  xdgmenuapplinkprocessor.h  xdgmenulayoutprocessor.cpp  xdgmenulayoutprocessor.h  xdgmenureader.cpp  xdgmenureader.h  xdgmenurules.cpp  xdgmenurules.h  xdgmenuwidget.cpp  xdgmenuwidget.h  xdgmime.cpp  xdgmime.h  xmlhelper.cpp  xmlhelper.h
libraries/razor-global-key-shortcut-selector/: CMakeLists.txt  shortcut_selector.cpp  shortcut_selector.h
libraries/razor-global-key-shortcuts-client/: CMakeLists.txt  action.cpp  action.h  action_p.h  client.cpp  client.h  client_adaptor.cpp  client_adaptor.h  client_p.h  razor-global-key-shortcuts-client.h
libraries/razormount/: CMakeLists.txt  Doxyfile.in  diskmonitor.cpp  diskmonitor.h  mount.cpp  mount.h  razormount.cpp  razormount.h  rzmountproviders.cpp  rzmountproviders.h  rzmountproviders_udisks2.cpp  storageitem.cpp  storageitem.h  storagemanager.cpp  storagemanager.h  udisksinfo.cpp  udisksinfo.h  udisksmanager.cpp  udisksmanager.h
libraries/razorqt/: CMakeLists.txt  Doxyfile.in  librazorqt.doxygen  libtranslate.h  pageselectwidget.cpp  pageselectwidget.h  powermanager.cpp  powermanager.h  programfinder.cpp  programfinder.h  razoraboutdlg.cpp  razoraboutdlg.h  razoraboutdlg.ui  razoraboutdlg_p.h  razorapplication.cpp  razorapplication.h  razorautostartentry.cpp  razorautostartentry.h  razorconfigdialog.cpp  razorconfigdialog.h  razorconfigdialog.ui  razorgridlayout.cpp  razorgridlayout.h  razornotification.cpp  razornotification.h  razornotification_p.h  razorplugininfo.cpp  razorplugininfo.h  razorsettings.cpp  razorsettings.h  razorshortcutbutton.cpp  razorshortcutbutton.h  razorshortcutbutton_p.h  rotatedwidget.cpp  rotatedwidget.h  screensaver.cpp  screensaver.h  xdgautostart.cpp  xdgautostart.h  xfitman.cpp  (+1 more)
libraries/razorqxt/: CMakeLists.txt  Doxyfile.in  keymapper_x11.h  librazorqxt.doxygen  qxtglobal.cpp  qxtglobal.h  qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_mac.cpp  qxtglobalshortcut_p.h  qxtglobalshortcut_win.cpp  qxtglobalshortcut_x11.cpp
libraries/sysstat/: CMakeLists.txt  basestat.cpp  basestat.h  basestat.hpp  basestat_p.h  basestat_p.hpp  cpufreqstat.cpp  cpufreqstat.hpp  cpufreqstat_p.hpp  cpustat.cpp  cpustat.h  cpustat.hpp  cpustat_p.h  cpustat_p.hpp  memstat.cpp  memstat.h  memstat.hpp  memstat_p.h  memstat_p.hpp  netstat.cpp  netstat.h  netstat.hpp  netstat_p.h  netstat_p.hpp  sysstat.pro  sysstat_global.hpp  version.cpp  version.hpp  version_p.hpp
librazorqt/: CMakeCache.txt  CMakeLists.txt  Doxyfile.in  Makefile  cmake_install.cmake  librazorqt.doxygen  libtranslate.h  razorqt.pro
librazorqt/librazor-upower/: README  battery.cpp  battery.h  ucpufreq.cpp  ucpufreq.h  upower.cpp  upower.h
librazorqt/qtxdg/: CMakeLists.txt  xdgaction.cpp  xdgaction.h  xdgdesktopfile.cpp  xdgdesktopfile.h  xdgdirs.cpp  xdgdirs.h  xdgicon.cpp  xdgicon.h  xdgmenu.cpp  xdgmenu.h  xdgmenu_p.h  xdgmenuapplinkprocessor.cpp  xdgmenuapplinkprocessor.h  xdgmenulayoutprocessor.cpp  xdgmenulayoutprocessor.h  xdgmenureader.cpp  xdgmenureader.h  xdgmenurules.cpp  xdgmenurules.h  xdgmenuwidget.cpp  xdgmenuwidget.h  xdgmime.cpp  xdgmime.h  xmlhelper.cpp  xmlhelper.h
librazorqt/razormount/: CMakeLists.txt  README  diskmonitor.cpp  diskmonitor.h  mount.cpp  mount.h  storageitem.cpp  storageitem.h  storagemanager.cpp  storagemanager.h
librazorqt/razorqt/: aboutdlg.ui  defs.h  domhelper.cpp  domhelper.h  libtranslate.h  pageselectwidget.cpp  pageselectwidget.h  powermanager.cpp  powermanager.h  razoraboutdlg.cpp  razoraboutdlg.h  razoraboutdlg.ui  razordevman.cpp  razordevman.h  razorgridlayout.cpp  razorgridlayout.h  razorhal.cpp  razorhal.h  razormime.cpp  razormime.h  razorplugininfo.cpp  razorplugininfo.h  razorsettings.cpp  razorsettings.h  razorshortcutbutton.cpp  razorshortcutbutton.h  razorshortcutbutton_p.h  xdgenv.h  (+35 more)
razorqt-appswitcher/: CMakeLists.txt
razorqt-confupdate/: CMakeLists.txt  README.razor-confupdate  razor-confupdate.cpp  rzupdate.cpp  rzupdate.h  rzwatcher.cpp  rzwatcher.h
razorqt-desktop/: CMakeCache.txt  CMakeLists.txt  Makefile  TODO  cmake_install.cmake  razorqt-desktop.pro
razorqt-lightdm-greeter/: CMakeLists.txt  logindata.cpp  logindata.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h
razorqt-notify/: CMakeLists.txt  TODO
razorqt-openssh-askpass/: CMakeLists.txt  README
razorqt-panel/: BuildPlugin.cmake  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  razorqt-panel.pro
razorqt-policykit/: CMakeLists.txt
razorqt-resources/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save.1  CMakeLists.txt.save.2  Makefile  cmake_install.cmake  install_manifest.txt  razorqt-resources.pro
razorqt-runner/: CMakeLists.txt  commanditemmodel.cpp  commanditemmodel.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  providers.cpp  providers.h  widgets.cpp  widgets.h  yamlparser.cpp  yamlparser.h
razorqt-session/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  razorqt-session.pro
razorqt-su/: CMakeLists.txt
razorqt-x11info/: CMakeLists.txt  main.cpp
(+7846 files in other folders)
